--- a/Service.html
+++ b/Service.html
@@ -130,21 +130,21 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/HeaderShoose1.jpg" style="height: 850px;" class="d-block w-100" alt="...">
+      <img src="images/HeaderShoose1.jpg" style="max-height: 1000px;" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Hello dear</h5>
         <p>You can buy some shoose for favorite people</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/HeaderShoosecl7.jpg" style="height: 850px;" class="d-block w-100" alt="...">
+      <img src="images/HeaderShoosecl7.jpg" style="max-height: 1000px;" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Hello dear</h5>
         <p>You can buy some shoose for favorite people</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/HeaderShoose1cl.jpg" style="height: 850px;" class="d-block w-100" alt="...">
+      <img src="images/HeaderShoose1cl.jpg" style="max-height: 1000px;" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
         <h5>Hello dear</h5>
         <p>You can buy some shoose for favorite people</p>
